# enlace-escuela-libreria

./: README.md  data.txt
enlace-escuela-libreria/: CMakeLists.txt  CsvUtils.cpp  CsvUtils.h  DatabaseManager.cpp  DatabaseManager.h  Escuela.cpp  Escuela.h  Inventario.cpp  Inventario.h  Libro.cpp  Libro.h  SistemaGestion.cpp  SistemaGestion.h  Vale.cpp  Vale.h  main.cpp  mainwindow.cpp  mainwindow.h
